--- a/wp-content/themes/wingman/assets/css/style.css
+++ b/wp-content/themes/wingman/assets/css/style.css
@@ -348,9 +348,12 @@ select:not([multiple]) {
   .btn.button-icon-right {
     margin-left: 5px; }
   .btn.btn-default {
-    background: #000000;
+    background: #252525;
     color: #FFFFFF;
-    border-color: #000000; }
+    border-color: #252525; }
+    .btn.btn-default:hover {
+      background: #82c14f;
+      border-color: #82c14f; }
   .btn.btn-animation span {
     -webkit-transform: translateX(0);
     -khtml-transform: translateX(0);
@@ -880,6 +883,20 @@ select:not([multiple]) {
 /* ==============================
    3. Blog
    ============================== */
+article.post-item {
+  margin-bottom: 50px; }
+
+.posted-on time {
+  display: none; }
+
+.posted-on .entry-date.published {
+  display: inline; }
+
+.entry-thumb {
+  display: block;
+  margin-bottom: 25px;
+  position: relative; }
+
 .blog-posts-image .format-quote .entry-thumb:before,
 .blog-posts-image .format-link .entry-thumb:before,
 .blog-posts-image .format-image .entry-thumb:before,
@@ -918,5 +935,456 @@ select:not([multiple]) {
   -ms-transition: all 0.2s ease-in-out 0s;
   -o-transition: all 0.2s ease-in-out 0s;
   transition: all 0.2s ease-in-out 0s; }
+.blog-posts-image .format-quote .entry-thumb:before {
+  content: "\7b";
+  font-size: 38px; }
+.blog-posts-image .format-link .entry-thumb:before {
+  content: "\e02b"; }
+.blog-posts-image .format-audio .entry-thumb:before {
+  content: "\e08e"; }
+.blog-posts-image .format-video .entry-thumb:before {
+  content: "\45";
+  font-size: 38px; }
+.blog-posts-image .format-gallery .entry-thumb:before {
+  content: "\e006"; }
+
+.blog-posts-image .entry-thumb img {
+  width: 100%; }
+
+.entry-thumb.no-image:before {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  content: '';
+  border: 2px solid #e5e5e5; }
+
+.entry-meta-data {
+  color: #959595;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 0.1em;
+  line-height: normal; }
+  .entry-meta-data a {
+    color: #959595; }
+    .entry-meta-data a:hover {
+      text-decoration: none;
+      color: #252525; }
+  .entry-meta-data > span:after {
+    content: "|";
+    margin-right: 8px;
+    margin-left: 10px;
+    color: #e9e9e9; }
+  .entry-meta-data > span:last-child:after {
+    content: '';
+    margin-left: 0;
+    margin-right: 0; }
+  .entry-meta-data > a.kt_likepost:before {
+    font-family: FontAwesome;
+    content: "\f08a";
+    margin-right: 5px; }
+  .entry-meta-data > a.kt_likepost.liked {
+    cursor: text; }
+    .entry-meta-data > a.kt_likepost.liked:before {
+      content: "\f004"; }
+    .entry-meta-data > a.kt_likepost.liked:hover {
+      color: inherit; }
+
+.entry-share-box a {
+  color: #b2b2b2;
+  display: inline-block;
+  font-size: 14px;
+  margin-left: 35px;
+  -webkit-transition: all 0.2s ease-in-out 0s;
+  -khtml-transition: all 0.2s ease-in-out 0s;
+  -moz-transition: all 0.2s ease-in-out 0s;
+  -ms-transition: all 0.2s ease-in-out 0s;
+  -o-transition: all 0.2s ease-in-out 0s;
+  transition: all 0.2s ease-in-out 0s; }
+  .entry-share-box a:hover {
+    color: #82c14f; }
+  .entry-share-box a i {
+    line-height: 20px;
+    display: block; }
+
+.entry-excerpt,
+.entry-more {
+  margin-bottom: 35px; }
+
+.post-quote-wrapper .post-quote-link,
+.post-link-wrapper .post-quote-link {
+  height: 100%;
+  left: 0;
+  overflow: hidden;
+  position: absolute;
+  text-indent: -999px;
+  top: 0;
+  width: 100%; }
+
+.post-item.format-audio .entry-thumb-audio {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%; }
+
+.post-item.format-audio .entry-thumb {
+  min-height: 55px;
+  overflow: hidden; }
+
+.entry-thumb-fullwidth .entry-thumb,
+.post-single .entry-thumb {
+  margin-bottom: 55px; }
+
+.post-single .entry-header {
+  margin-bottom: 30px; }
+  .post-single .entry-header .entry-title {
+    margin: 0;
+    text-transform: uppercase;
+    color: #252525;
+    letter-spacing: 0.2em; }
+.post-single > .entry-content-outer {
+  border-bottom: 1px solid #e9e9e9;
+  padding-bottom: 20px;
+  margin-bottom: 60px; }
+  .post-single > .entry-content-outer .entry-content {
+    margin-bottom: 20px; }
+.post-single .tags-links {
+  font-size: 0; }
+  .post-single .tags-links span {
+    font-weight: bold;
+    padding-right: 5px;
+    text-transform: uppercase;
+    display: none; }
+  .post-single .tags-links a {
+    display: inline-block;
+    padding: 8px 35px;
+    border: 1px solid #e8e8e8;
+    text-transform: uppercase;
+    color: #898989;
+    font-size: 11px;
+    border-radius: 3px;
+    margin-right: 10px;
+    line-height: 1; }
+.post-single .entry-share-box {
+  line-height: 30px; }
+
+.entry-content .edit-link {
+  clear: both;
+  display: block;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.33333;
+  text-transform: uppercase;
+  padding: 20px 0; }
+  .entry-content .edit-link a {
+    margin-right: 10px; }
+    .entry-content .edit-link a:before {
+      -webkit-font-smoothing: antialiased;
+      display: inline-block;
+      font-family: "Simple-Line-Icons";
+      text-decoration: inherit;
+      vertical-align: text-bottom;
+      content: "\e05f";
+      margin-right: 5px; }
+
+.author-info {
+  background: #e9e9e9;
+  margin-bottom: 50px;
+  padding: 20px;
+  position: relative; }
+  .author-info .author-avatar {
+    position: absolute;
+    left: 20px;
+    top: 20px; }
+  .author-info h2.author-title {
+    font-size: 16px;
+    margin: 0 0 15px;
+    line-height: 20px;
+    text-transform: uppercase;
+    display: inline-block; }
+    .author-info h2.author-title a {
+      color: #252525; }
+      .author-info h2.author-title a:hover {
+        color: #82c14f; }
+  .author-info .author-social {
+    display: inline-block;
+    line-height: 20px;
+    color: #b2b2b2; }
+    .author-info .author-social:before {
+      content: '|';
+      font-size: 17px;
+      padding-left: 10px;
+      padding-right: 10px; }
+    .author-info .author-social a {
+      color: #b2b2b2;
+      padding: 0 8px;
+      font-size: 16px; }
+      .author-info .author-social a:hover {
+        color: #82c14f; }
+  .author-info .author-description {
+    padding-left: 195px;
+    min-height: 165px; }
+  .author-info a.author-link {
+    display: inline-block; }
+
+.post-navigation {
+  position: relative;
+  margin-bottom: 50px; }
+  .post-navigation .nav-next {
+    float: right; }
+  .post-navigation .nav-previous {
+    float: left; }
+
+.title-article {
+  margin: 0 0 60px;
+  padding: 0;
+  font-size: 18px;
+  color: #252525;
+  letter-spacing: 0.2em; }
+
+.comments-area .comments-title, .comments-area .comment-reply-title {
+  margin: 0 0 60px;
+  padding: 0;
+  font-size: 18px;
+  color: #252525;
+  letter-spacing: 0.2em; }
+
+.comment-respond .comment-form-fields {
+  margin: 0 -7px; }
+.comment-respond .comment_field-column {
+  float: left;
+  width: 33.33%;
+  padding: 0 7px; }
+
+.comment-navigation {
+  margin-top: 40px; }
+  .comment-navigation .nav-previous {
+    float: left; }
+  .comment-navigation .nav-next {
+    float: right; }
+
+.comment-list {
+  padding: 0;
+  margin: 0; }
+  .comment-list li {
+    list-style: none; }
+
+.comment-form p label {
+  display: block;
+  font-weight: normal; }
+
+.comment_nav {
+  display: block; }
+  .comment_nav .previous {
+    float: right; }
+  .comment_nav a {
+    margin-bottom: 20px;
+    display: inline-block; }
+    .comment_nav a:before {
+      clear: both;
+      content: " ";
+      display: block; }
+
+.comment-meta {
+  margin-bottom: 15px;
+  line-height: 20px;
+  padding-right: 120px; }
+  .comment-meta h5 {
+    display: block;
+    font-size: 14px;
+    line-height: 20px;
+    margin: 0;
+    padding: 0;
+    letter-spacing: 0.2em;
+    color: #252525; }
+    .comment-meta h5 a {
+      color: #252525; }
+  .comment-meta .comment-date {
+    display: block;
+    color: #959595;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    margin-bottom: 10px; }
+
+.comment-entry.entry-content {
+  border: medium none;
+  margin-bottom: 5px;
+  padding: 0; }
+  .comment-entry.entry-content p {
+    margin: 0; }
+
+.comment-item {
+  margin-bottom: 60px;
+  padding: 0; }
+  .comment-item .comment-avatar {
+    float: left;
+    height: 68px;
+    margin-right: 30px;
+    width: 68px; }
+    .comment-item .comment-avatar img {
+      max-width: 100%; }
+
+.comment-list > li:first-child > .comment-item {
+  border-top: none; }
+
+.comment-content {
+  margin-left: 95px;
+  padding-left: 30px;
+  border-left: 1px solid #e9e9e9;
+  position: relative; }
+
+.comment-actions {
+  position: absolute;
+  top: 0;
+  right: 0; }
+  .comment-actions a {
+    padding: 5px 20px 3px;
+    line-height: normal;
+    border: 2px solid #000000;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 13px;
+    color: #252525;
+    letter-spacing: 0.2em;
+    display: inline-block; }
+
+#cancel-comment-reply-link {
+  background: #252525;
+  color: #FFFFFF;
+  display: inline-block;
+  font-size: 12px;
+  padding: 4px 7px;
+  text-transform: uppercase;
+  vertical-align: text-bottom; }
+  #cancel-comment-reply-link:hover {
+    background: #82c14f; }
+
+.comment .comment-list ul.children {
+  margin-left: 100px; }
+  .comment .comment-list ul.children .comment-avatar {
+    height: 70px;
+    width: 70px; }
+  .comment .comment-list ul.children .comment-content {
+    margin-left: 100px; }
+  .comment .comment-list ul.children .comment-respond {
+    margin-left: 100px; }
+    .comment .comment-list ul.children .comment-respond .comment-form-fields {
+      margin: 0; }
+    .comment .comment-list ul.children .comment-respond .comment_field-column {
+      padding: 0;
+      width: 100%; }
+.comment .comment-list .comment-respond {
+  margin-left: 130px; }
+
+.comment-respond {
+  margin-bottom: 25px;
+  padding-top: 55px;
+  border-top: 1px solid #e9e9e9; }
+
+.comment-notes,
+.form-allowed-tags {
+  display: none; }
+
+#commentform textarea, #commentform input[type="text"] {
+  padding: 15px 0;
+  color: #707070;
+  border: none;
+  border-bottom: 1px solid #e5e5e5;
+  height: auto;
+  line-height: normal; }
+#commentform .form-submit {
+  margin-top: 60px; }
+  #commentform .form-submit input#submit {
+    border-radius: 2px; }
+
+#related-article {
+  margin-bottom: 10px; }
+  #related-article h2.entry-title {
+    font-size: 14px;
+    margin: 0;
+    padding: 0;
+    text-transform: uppercase; }
+    #related-article h2.entry-title a {
+      color: #252525; }
+
+/* ==============================
+   4. Breadcrumb
+   ============================== */
+.woocommerce-breadcrumb .navigation-pipe:after,
+.breadcrumbs .navigation-pipe:after {
+  content: "\f111";
+  font-family: FontAwesome;
+  font-size: 6px;
+  padding: 0 15px;
+  vertical-align: middle; }
+
+/* ==============================
+   5. Page Header
+   ============================== */
+.page-header {
+  margin: 0;
+  padding: 90px 0 45px;
+  border: none;
+  background: none;
+  color: #252525; }
+  .page-header .breadcrumbs {
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    color: #707070; }
+    .page-header .breadcrumbs a {
+      color: #707070; }
+      .page-header .breadcrumbs a:hover {
+        text-decoration: underline; }
+  .page-header h1.page-header-title {
+    margin: 0;
+    font-size: 36px;
+    line-height: normal;
+    text-transform: uppercase;
+    display: inline-block;
+    letter-spacing: 0.2em;
+    border: none;
+    padding: 0 50px;
+    position: relative; }
+    .page-header h1.page-header-title:after, .page-header h1.page-header-title:before {
+      content: "";
+      width: 2px;
+      height: 26px;
+      background: #252525;
+      position: absolute;
+      top: 50%;
+      transform: translatey(-65%);
+      -webkit-transform: translatey(-65%);
+      -moz-transform: translatey(-65%);
+      -ms-transform: translatey(-65%);
+      right: 0; }
+    .page-header h1.page-header-title:before {
+      left: 0; }
+  .page-header .page-header-subtitle {
+    position: relative;
+    margin-top: 10px; }
+  .page-header .page-header-separator {
+    background: #FFFFFF;
+    height: 2px;
+    margin: 10px 0 15px;
+    width: 38px; }
+  .page-header .breadcrumbs {
+    margin: 0 0 15px; }
+
+.page-header-left {
+  text-align: left; }
+
+.page-header-right {
+  text-align: right; }
+  .page-header-right .page-header-separator {
+    float: right; }
+
+.page-header-center {
+  text-align: center; }
+  .page-header-center .page-header-separator {
+    margin-left: auto;
+    margin-right: auto; }
 
 /*# sourceMappingURL=style.css.map */
