--- a/wp-content/themes/wingman/assets/css/_variables.scss
+++ b/wp-content/themes/wingman/assets/css/_variables.scss
@@ -32,6 +32,8 @@ $title-text: #252525;
 $tool-font: #636363;
 
 $border-color: #e5e5e5;
+$border-second-color: #e9e9e9;
+$border-third-color: #e8e8e8;
 $nav-bg: #1e1e1e;
 
 $black: #000000;
@@ -39,3 +41,5 @@ $white: #FFFFFF;
 $gray: #c5c5c5;
 
 $icon-list: #959595;
+$social-color: #b2b2b2;
+$second-color: #898989;
